# pi-streamdeck

./: .gitignore  README.md  justfile  pyproject.toml
src/pi_streamdeck/: __init__.py
src/pi_streamdeck/client/: app.py  main.py
src/pi_streamdeck/client/templates/: index.html
src/pi_streamdeck/server/: app.py  main.py
