[project]
name = "pi-streamdeck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litestar[picologging,standard]>=2.11.0",
]

[project.scripts]
hello = "pi_streamdeck:hello"
pi-streamdeck-server = "pi_streamdeck.server.main:main"
pi-streamdeck-client = "pi_streamdeck.client.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
